k3s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: warehouse
  namespace: apps

spec:
  selector:
    app: warehouse

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
